[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/ConfigMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[node name="ConfigMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="PopupDialog" type="PopupDialog" parent="."]
margin_left = 89.0
margin_top = 80.0
margin_right = 669.0
margin_bottom = 434.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupDialog"]
margin_left = 5.94055
margin_top = 35.6649
margin_right = 545.941
margin_bottom = 257.665
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="CenterContainer" parent="PopupDialog/VBoxContainer"]
margin_right = 540.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopupDialog/VBoxContainer/Title"]
margin_left = 171.0
margin_right = 369.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "Configurações"
align = 1

[node name="spacer2" type="CenterContainer" parent="PopupDialog/VBoxContainer"]
margin_top = 40.0
margin_right = 540.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 40 )

[node name="SoundOptions" type="CenterContainer" parent="PopupDialog/VBoxContainer"]
margin_top = 84.0
margin_right = 540.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="PopupDialog/VBoxContainer/SoundOptions"]
margin_left = 210.0
margin_right = 330.0
margin_bottom = 40.0

[node name="chkSom" type="CheckButton" parent="PopupDialog/VBoxContainer/SoundOptions/HBox"]
margin_right = 120.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
shortcut_in_tooltip = false
text = "Som"

[node name="spacer3" type="CenterContainer" parent="PopupDialog/VBoxContainer"]
margin_top = 128.0
margin_right = 540.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 40 )

[node name="ThemeOptions" type="CenterContainer" parent="PopupDialog/VBoxContainer"]
margin_top = 172.0
margin_right = 540.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="PopupDialog/VBoxContainer/ThemeOptions"]
margin_left = 238.0
margin_top = 5.0
margin_right = 301.0
margin_bottom = 35.0

[node name="ThemeMenuButton" type="MenuButton" parent="PopupDialog/VBoxContainer/ThemeOptions/HBox"]
margin_right = 63.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "Tema"
align = 0

[node name="ThemeMenu" type="PopupMenu" parent="PopupDialog/VBoxContainer/ThemeOptions/HBox/ThemeMenuButton"]
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spacer" type="CenterContainer" parent="PopupDialog/VBoxContainer"]
margin_top = 216.0
margin_right = 540.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 40 )

[node name="CenterContainer3" type="CenterContainer" parent="PopupDialog/VBoxContainer"]
margin_top = 260.0
margin_right = 540.0
margin_bottom = 295.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PopupDialog/VBoxContainer/CenterContainer3"]
margin_left = 121.0
margin_right = 419.0
margin_bottom = 35.0

[node name="btnSalvar" type="Button" parent="PopupDialog/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 120.0
margin_bottom = 35.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = SubResource( 4 )
text = "Salvar"

[node name="CenterContainer" type="CenterContainer" parent="PopupDialog/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 124.0
margin_right = 174.0
margin_bottom = 35.0
rect_min_size = Vector2( 50, 0 )

[node name="btnCancelar" type="Button" parent="PopupDialog/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 178.0
margin_right = 298.0
margin_bottom = 35.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = SubResource( 4 )
text = "Cancelar"
__meta__ = {
"_editor_description_": ""
}

[connection signal="about_to_show" from="PopupDialog" to="." method="_on_PopupDialog_about_to_show"]
[connection signal="about_to_show" from="PopupDialog/VBoxContainer/ThemeOptions/HBox/ThemeMenuButton/ThemeMenu" to="." method="_on_ThemeMenu_about_to_show"]
[connection signal="pressed" from="PopupDialog/VBoxContainer/CenterContainer3/HBoxContainer/btnSalvar" to="." method="_on_btnSalvar_pressed"]
[connection signal="pressed" from="PopupDialog/VBoxContainer/CenterContainer3/HBoxContainer/btnCancelar" to="." method="_on_btnCancelar_pressed"]
